--- a/PrestamoBancacio.Api/appsettings.json
+++ b/PrestamoBancacio.Api/appsettings.json
@@ -1,12 +1,13 @@
 {
   "ConnectionStrings": {
-    "Default": "postgresql://postgres:Desarrollo@localhost:5432/Prestamos"
-  }
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
-    },
-    "AllowedHosts": "*"
-  }
+    "Default": "Host=localhost;Port=5432;Database=Prestamos;Username=postgres;Password=Desarrollo"
+  },
+
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
+}
