Ass Seciruty token

--- a/PrestamoBancacio.Api/appsettings.json
+++ b/PrestamoBancacio.Api/appsettings.json
@@ -3,6 +3,11 @@
     "Default": "Host=localhost;Port=5432;Database=Prestamos;Username=postgres;Password=Desarrollo"
   },
 
+  "Jwt": {
+    "Key": "A9f$3kL!xZ7pQwT2@rM8vC1sD4eF6gH9",
+    "Issuer": "http://localhost:7076",
+    "Audience": "http://localhost:7076/users"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
