--- a/PrestamoBancario.Infraestructure/PrestamoBancario.Infraestructure.csproj
+++ b/PrestamoBancario.Infraestructure/PrestamoBancario.Infraestructure.csproj
@@ -29,6 +29,10 @@
     <InternalsVisibleTo Include="PrestamoBancario.Api" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
   
 
 </Project>
