--- a/PrestamoBancario.Test/PrestamoBancario.Test.csproj
+++ b/PrestamoBancario.Test/PrestamoBancario.Test.csproj
@@ -11,9 +11,17 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.8" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="xunit" Version="2.5.3" />
+    <PackageReference Include="Xunit.DependencyInjection" Version="10.7.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PrestamoBancario.Application\PrestamoBancario.Application.csproj" />
+    <ProjectReference Include="..\PrestamoBancario.Domain\PrestamoBancario.Domain.csproj" />
+    <ProjectReference Include="..\PrestamoBancario.Infraestructure\PrestamoBancario.Infraestructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
